--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,13 +8,20 @@ body {
 }
 
 header {
+    max-width: 1400px;
+    width: 100%;
+    margin:auto;
     min-height: 30vh;
+    //display: flex;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+
 
     h1 {
-        margin: auto;
+        margin: 0;
         color: $red;
-        text-align: center;
+        text-align: left;
         font-size: 60px;
     }
 }
@@ -22,10 +29,14 @@ header {
 main {
     max-width: 1400px;
     width: 100%;
-    display: block;
+    display:block;
     margin:0 auto 100px auto;
     padding: 0;
     
+}
+
+p {
+    color: white;
 }
 
 .tip {   
@@ -34,7 +45,7 @@ main {
     text-align: center;
 }
 
-.video-wrapper {
+#video-wrapper {
     display: grid;
     grid-template-columns: repeat(4, 1fr);        
     grid-auto-flow: dense; 
@@ -62,4 +73,14 @@ video {
     @media(max-width: 500px){
         height: auto;
     }
+}
+
+#date-picker {
+    margin-bottom: 50px;
+}
+
+#show_all_video {
+    color:$red;
+    margin-left: 10px;
+    cursor: pointer;
 }
