--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,18 +1,21 @@
 $red: #ed6746;
 
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;1,400&family=Roboto+Slab:wght@300;400;500;600&display=swap');
+
+
 body {
-    font-family: sans-serif;
+    font-family: 'Inconsolata', monospace;
     margin:0;
     padding: 0;
-    background-color: #040404;
-}
+    /* background-color: #040404;
+    color: white;*/
+} 
 
 header {
     max-width: 1400px;
     width: 100%;
     margin:auto;
-    min-height: 30vh;
-    //display: flex;
+    min-height: 20vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -36,7 +39,7 @@ main {
 }
 
 p {
-    color: white;
+    //color: white;
 }
 
 .tip {   
@@ -75,12 +78,34 @@ video {
     }
 }
 
+.active {
+    fill: green !important
+}
+
 #date-picker {
     margin-bottom: 50px;
 }
 
 #show_all_video {
-    color:$red;
+    color: $red;
     margin-left: 10px;
     cursor: pointer;
+    text-transform: uppercase;   
+    font-weight: 600; 
+}
+
+#calendar-wrapper {
+    width: max-content;
+    margin: 0 auto;   
+}
+
+.day {
+    cursor: pointer;
+    outline: none;
+}
+
+#selected-date, #show_all_video {
+    display:block;
+    text-align: center;
+    margin: 10px 0;
 }
