--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;1,400&family=Roboto+Slab:wght@300;400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=PT+Mono&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;1,300&display=swap");
 body {
-  font-family: 'Inconsolata', monospace;
+  font-family: 'Roboto Mono', monospace;
   margin: 0;
   padding: 0;
   /* background-color: #040404;
@@ -8,6 +8,7 @@ body {
 }
 
 header {
+  padding: 20px;
   max-width: 1400px;
   width: 100%;
   margin: auto;
