--- a/css/styles.css
+++ b/css/styles.css
@@ -3,15 +3,13 @@ body {
   font-family: 'Roboto Mono', monospace;
   margin: 0;
   padding: 0;
-  /* background-color: #040404;
-    color: white;*/
+  background-color: #e3e3e3;
+  /*color: white;*/
 }
 
 header {
-  padding: 20px;
-  max-width: 1400px;
   width: 100%;
-  margin: auto;
+  margin-bottom: 50px;
   min-height: 20vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -22,13 +20,20 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-color: black;
+}
+
+header div {
+  max-width: 1400px;
+  width: 90%;
+  margin: auto;
 }
 
 header h1 {
   margin: 0;
   color: #ed6746;
   text-align: left;
-  font-size: 60px;
+  font-size: 50px;
 }
 
 main {
