--- a/css/styles.css
+++ b/css/styles.css
@@ -4,44 +4,59 @@ body {
   margin: 0;
   padding: 0;
   background-color: #e3e3e3;
-  /*color: white;*/
 }
 
 header {
-  width: 100%;
-  margin-bottom: 50px;
-  min-height: 20vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  height: 100vh;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: #333;
+}
+
+@media (max-width: 700px) {
+  header {
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+    z-index: 100;
+  }
+}
+
+header div.header-wrapper {
+  width: 90%;
+  margin: 10px auto 50px auto;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: black;
-}
-
-header div {
-  max-width: 1400px;
-  width: 90%;
-  margin: auto;
 }
 
 header h1 {
-  margin: 0;
   color: #ed6746;
   text-align: left;
-  font-size: 50px;
+  font-size: 30px;
+}
+
+@media (max-width: 700px) {
+  header h1 {
+    margin: 0;
+  }
 }
 
 main {
-  max-width: 1400px;
-  width: 90%;
-  display: block;
+  width: 96%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 4fr;
+      grid-template-columns: 1fr 4fr;
   margin: 0 auto 100px auto;
   padding: 0;
+}
+
+@media (max-width: 700px) {
+  main {
+    display: block;
+  }
 }
 
 .tip {
@@ -58,21 +73,21 @@ main {
   grid-auto-flow: dense;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1200px) {
   #video-wrapper {
     -ms-grid-columns: (1fr)[3];
         grid-template-columns: repeat(3, 1fr);
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 900px) {
   #video-wrapper {
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 700px) {
   #video-wrapper {
     display: block;
   }
@@ -85,12 +100,18 @@ main {
   margin: 2px;
 }
 
+@media (max-width: 700px) {
+  .video-item {
+    height: auto;
+  }
+}
+
 video {
   width: 100%;
   height: 400px;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 700px) {
   video {
     height: auto;
   }
@@ -112,11 +133,17 @@ video {
   font-weight: 600;
 }
 
+.calendar {
+  width: 90%;
+  margin: auto;
+  color: white;
+}
+
 #calendar-wrapper {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
-  margin: 0 auto;
+  margin: 0;
 }
 
 .day {
@@ -126,7 +153,6 @@ video {
 
 #selected-date, #show_all_video {
   display: block;
-  text-align: center;
   margin: 10px 0;
 }
 /*# sourceMappingURL=styles.css.map */
