--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,46 +8,46 @@ body {
     margin:0;
     padding: 0;
     background-color:#e3e3e3;
-    /*color: white;*/
 } 
 
-header {       
-    width: 100%;
-    margin-bottom: 50px;
-    min-height: 20vh;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: black;
-
-    div {
-        max-width: 1400px;
-        width:90%;
-        margin: auto;
-
+header {     
+    height:100vh;
+    position: sticky;
+    top: 0;   
+    background-color: #333;
+    @media(max-width: 700px){
+        height: max-content;
+        z-index:100;
     }
 
+    div.header-wrapper {  
+        width: 90%;
+        margin: 10px auto 50px auto;      
+        align-items: center;
+    }
 
-    h1 {
-        margin: 0;
+    h1 {        
         color: $red;
         text-align: left;
-        font-size: 50px;
+        font-size: 30px;
+        @media(max-width: 700px){
+            margin: 0;
+        }  
     }
 }
 
-main {
-    max-width: 1400px;
-    width: 90%;
-    display:block;
+main {    
+    width: 96%;
+    display:grid;
+    grid-template-columns: 1fr 4fr;
     margin:0 auto 100px auto;
-    padding: 0;
-    
+    padding: 0;  
+    @media(max-width: 700px){
+        display:block;
+    }  
 }
 
-p {
-    //color: white;
-}
+
 
 .tip {   
     color: $red;
@@ -59,13 +59,13 @@ p {
     display: grid;
     grid-template-columns: repeat(4, 1fr);        
     grid-auto-flow: dense; 
-    @media(max-width: 900px){
+    @media(max-width: 1200px){
         grid-template-columns: repeat(3, 1fr);        
     }
-    @media(max-width: 700px){
+    @media(max-width: 900px){
         grid-template-columns: repeat(2, 1fr);        
     }
-    @media(max-width: 500px){
+    @media(max-width: 700px){
         display: block;  
     }
 }
@@ -75,12 +75,15 @@ p {
     height: calc(100% - 10px);
     border: 1px solid #ed67465c;
     margin: 2px;
+    @media(max-width: 700px){
+        height: auto;
+    }
 }
 
 video {
     width: 100%;
     height: 400px;
-    @media(max-width: 500px){
+    @media(max-width: 700px){
         height: auto;
     }
 }
@@ -101,9 +104,15 @@ video {
     font-weight: 600; 
 }
 
+.calendar {
+    width:90%;
+    margin:auto;
+    color: white;
+}
+
 #calendar-wrapper {
     width: max-content;
-    margin: 0 auto;   
+    margin: 0;   
 }
 
 .day {
@@ -113,6 +122,5 @@ video {
 
 #selected-date, #show_all_video {
     display:block;
-    text-align: center;
     margin: 10px 0;
 }
