--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -11,7 +11,7 @@ body {
 } 
 
 header {     
-    height:100vh;
+    height: 100vh;
     position: sticky;
     top: 0;   
     background-color: #333;
@@ -40,7 +40,7 @@ main {
     width: 96%;
     display:grid;
     grid-template-columns: 1fr 4fr;
-    margin:0 auto 100px auto;
+    margin:0 auto;
     padding: 0;  
     @media(max-width: 700px){
         display:block;
@@ -72,7 +72,7 @@ main {
 
 .video-item {
     width: calc(100% - 10px);
-    height: calc(100% - 10px);
+    height: max-content;
     border: 1px solid #ed67465c;
     margin: 2px;
     @media(max-width: 700px){
