--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ header {
   position: sticky;
   top: 0;
   background-color: #333;
+  padding-bottom: 10px;
 }
 
 @media (max-width: 700px) {
@@ -20,6 +21,7 @@ header {
     height: -moz-max-content;
     height: max-content;
     z-index: 100;
+    position: relative;
   }
 }
 
@@ -171,5 +173,13 @@ select {
   display: none;
   text-align: center;
   margin: auto;
+}
+
+#scroll-top {
+  width: 30px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  cursor: pointer;
 }
 /*# sourceMappingURL=styles.css.map */
