--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,9 +15,11 @@ header {
     position: sticky;
     top: 0;   
     background-color: #333;
+    padding-bottom: 10px;
     @media(max-width: 700px){
         height: max-content;
         z-index:100;
+        position: relative;
     }
 
     div.header-wrapper {  
@@ -138,4 +140,12 @@ select {
     display: none;
     text-align: center;
     margin: auto;
+}
+
+#scroll-top {
+    width: 30px; 
+    position: fixed; 
+    bottom: 20px; 
+    right: 20px; 
+    cursor: pointer;
 }
