--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ main {
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
-  border: 1px solid #ed67465c;
+  border: 1px solid #ed6746;
   margin: 2px;
 }
 
