--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -75,7 +75,7 @@ main {
 .video-item {
     width: calc(100% - 10px);
     height: max-content;
-    border: 1px solid #ed67465c;
+    border: 1px solid #ed6746;
     margin: 2px;
     @media(max-width: 700px){
         height: auto;
