--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -262,21 +262,11 @@ select {
         margin: auto;
       }
     }
-  
-    #rm-1 {
-      background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../img/rm-1.png");
-      background-size: cover;      
-    }
-  
-    #rm-2 {
-      background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../img/rm-2.jpg");
-      background-size: cover;
-    }
-  
-    #rm-3 {
-      background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../img/rm-3.jpg");
-      background-size: cover;
-    }  
+
+    .rm {
+        background-size: cover;  
+    } 
+   
   }
   
   
