--- a/css/styles.css
+++ b/css/styles.css
@@ -319,21 +319,7 @@ select {
   margin: auto;
 }
 
-#read-more #rm-1 {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../img/rm-1.png");
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/rm-1.png");
-  background-size: cover;
-}
-
-#read-more #rm-2 {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../img/rm-2.jpg");
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/rm-2.jpg");
-  background-size: cover;
-}
-
-#read-more #rm-3 {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../img/rm-3.jpg");
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/rm-3.jpg");
+#read-more .rm {
   background-size: cover;
 }
 
