--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -58,7 +58,7 @@ img {
 main {    
     width: 96%;
     display:grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1.2fr 4fr;
     margin:0 auto;
     padding: 0;  
     @media(max-width: 700px){
@@ -79,13 +79,13 @@ main {
     grid-template-columns: repeat(4, 1fr);        
     grid-auto-flow: dense; 
     min-height: 50vh;
-    @media(max-width: 1200px){
+    @media(max-width: 1300px){
         grid-template-columns: repeat(3, 1fr);        
     }
     @media(max-width: 900px){
         grid-template-columns: repeat(2, 1fr);        
     }
-    @media(max-width: 700px){
+    @media(max-width: 800px){
         display: block;  
     }
 }
@@ -150,7 +150,18 @@ select {
     color: white;
     display: block;
     margin: 5px 0 50px;
-    padding: 5px;
+    padding: 5px;   
+    max-width: 100%;
+    overflow: hidden;
+    white-space: normal;
+    text-overflow: ellipsis; 
+}
+
+option {
+  max-width: 100%;
+  overflow: hidden;
+  white-space: normal;
+  text-overflow: ellipsis;
 }
 
 .no-video {
