параметри фільтрів в URL

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -139,7 +139,7 @@ video {
     outline: none;
 }
 
-#selected-date, #show_all_video {
+#selected-date, #show_all_dates {
     display:block;
     margin: 10px 0;
 }
