--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,7 @@ video {
   outline: none;
 }
 
-#selected-date, #show_all_video {
+#selected-date, #show_all_dates {
   display: block;
   margin: 10px 0;
 }
