--- a/css/styles.css
+++ b/css/styles.css
@@ -165,10 +165,10 @@ video {
 }
 
 #day-select {
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
+  max-width: 320px;
+  width: 100%;
   margin: 0;
+  overflow-x: scroll;
 }
 
 .day {
