--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -126,8 +126,10 @@ video {
 }
 
 #day-select {
-    width: max-content;
+    max-width: 320px;
+    width: 100%;
     margin: 0;   
+    overflow-x: scroll;
 }
 
 .day {
